# print-guardian

./: .env.example  .gitignore  Cargo.toml  Dockerfile  MIGRATION.md  README.md  config.yaml  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: ci.yaml
src/: alerts.rs  config.rs  detector.rs  error.rs  image_fetcher.rs  lib.rs  main.rs  printer.rs
tests/: test.rs
