[package]
name = "print-guardian"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
darknet = "0.4.0"
env_logger = "0.11.5"
image = "0.24.9"
imageproc = "0.23.0"
log = "0.4.22"
reqwest = { version = "0.12.22", features = ["blocking", "json", "multipart"] }
serde_json = "1.0"
base64 = "0.21.0"
rusttype = "0.9.3"
